[project]
name = "multi-agent-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-ollama>=0.3.5",
    "openai>=1.97.0",
    "pydantic>=2.0.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "rich>=14.0.0",
    "tavily-python>=0.7.10",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
